style(ui): Se cambio los colores a los enlaces e indices

--- a/styles/global.css
+++ b/styles/global.css
@@ -110,6 +110,11 @@ p {
   font-size: 1.1rem;
 }
 
+.indice li,
+.indice a {
+  color: color-mix(in srgb, var(--highlight-color), white 20%);
+}
+
 footer {
   background-color: var(--footer-bg);
   color: var(--text-color);
