--- a/styles/global.css
+++ b/styles/global.css
@@ -104,6 +104,13 @@ h2 {
   margin-bottom: 1rem;
 }
 
+h3 {
+  color: #1b7ecf;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 p {
   margin-bottom: 1rem;
   color: var(--text-color);
